--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,12 @@
         "php": "^8.3",
         "psr/log": "^3.0@dev"
     },
+    "suggest": {
+        "potter/logger-interfaces": "dev-main",
+        "potter/logger": "dev-main",
+        "potter/contracts": "dev-main",
+        "potter/framework": "dev-main"
+    },
     "license": "MIT",
     "autoload": {
         "psr-4": {
